v2.4: update to 1.24 and fix null on get off